test-package-compiler/src/snapshots/test_package_compiler__generated_tests__erlang_app_generation.snap
---
source: test-package-compiler/src/generated_tests.rs
expression: "./cases/erlang_app_generation"
snapshot_kind: text
---
//// /out/lib/the_package/_gleam_artefacts/main.cache
<.cache binary>

//// /out/lib/the_package/_gleam_artefacts/main.cache_meta
<57 byte binary>

//// /out/lib/the_package/_gleam_artefacts/main.erl
-module(main).


//// /out/lib/the_package/ebin/my_erlang_application.app
{application, my_erlang_application, [
    {mod, {'my_erlang_application_sup', []}},
    {vsn, "0.1.0"},
    {applications, [gleam_otp,
                    gleam_stdlib,
                    inets,
                    midas,
                    simple_json,
                    ssl]},
    {description, "It's very cool"},
    {modules, [main]},
    {registered, []}
]}.


//// Warning
warning: Empty module
  ┌─ src/main.gleam:1:1
  │
1 │ 
  │ ^ This module is empty

Module 'main' contains no public definitions.
Hint: Consider adding public functions, types, or constants, or removing this module.
