test-package-compiler/src/snapshots/test_package_compiler__generated_tests__not_overwriting_erlang_module.snap
---
source: test-package-compiler/src/generated_tests.rs
expression: "./cases/not_overwriting_erlang_module"
snapshot_kind: text
---
//// /out/lib/the_package/_gleam_artefacts/app@code.cache
<.cache binary>

//// /out/lib/the_package/_gleam_artefacts/app@code.cache_meta
<73 byte binary>

//// /out/lib/the_package/_gleam_artefacts/app@code.erl
-module(app@code).


//// /out/lib/the_package/ebin/importy.app
{application, importy, [
    {vsn, "0.1.0"},
    {applications, []},
    {description, ""},
    {modules, [app@code]},
    {registered, []}
]}.


//// Warning
warning: Empty module
  ┌─ src/app/code.gleam:1:1
  │
1 │ 
  │ ^ This module is empty

Module 'app/code' contains no public definitions.
Hint: Consider adding public functions, types, or constants, or removing this module.
